sistemazione completa dei facade e service: divisione della logica e implementazione corretta di tutti i metodi